attempt to fix fixed image issues on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 ::-moz-selection { /* firefox */
 	color: #FBFBFB;
 	background: #F93154;
